--- a/trunk/gtk.mod/ide.glade
+++ b/trunk/gtk.mod/ide.glade
@@ -987,7 +987,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkColorButton" id="colorbutton__Scintilla_BG">
+		    <widget class="GtkColorButton" id="colorbutton_Scintilla_BG">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="use_alpha">False</property>
@@ -1089,13 +1089,14 @@
 	  <property name="right_padding">0</property>
 
 	  <child>
-	    <widget class="GtkButton" id="button1">
+	    <widget class="GtkButton" id="button_opttions">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
 	      <property name="label" translatable="yes">Übernehmen &amp; Speichern</property>
 	      <property name="use_underline">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
+	      <signal name="clicked" handler="bb_button_opttions_click" last_modification_time="Mon, 13 Feb 2006 18:47:47 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
