--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -66,14 +66,16 @@
 		      <property name="visible">True</property>
 		      <property name="label">gtk-save</property>
 		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="bb_tb_save_click" last_modification_time="Sun, 19 Feb 2006 12:05:54 GMT"/>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkImageMenuItem" id="speichern_unter1">
+		    <widget class="GtkImageMenuItem" id="mi_save_under">
 		      <property name="visible">True</property>
 		      <property name="label">gtk-save-as</property>
 		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="bb_mi_save_under_click" last_modification_time="Sun, 19 Feb 2006 12:01:17 GMT"/>
 		    </widget>
 		  </child>
 
