--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -104,6 +104,32 @@
 		<widget class="GtkMenu" id="menuitem2_menu">
 
 		  <child>
+		    <widget class="GtkImageMenuItem" id="MenuItem_Undo">
+		      <property name="visible">True</property>
+		      <property name="label">gtk-undo</property>
+		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="bb_Undo" last_modification_time="Sun, 05 Mar 2006 07:44:03 GMT"/>
+		      <accelerator key="Z" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="MenuItem_Redo">
+		      <property name="visible">True</property>
+		      <property name="label">gtk-redo</property>
+		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="bb_Redo" last_modification_time="Sun, 05 Mar 2006 07:44:03 GMT"/>
+		      <accelerator key="Z" modifiers="GDK_CONTROL_MASK | GDK_SHIFT_MASK" signal="activate"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkSeparatorMenuItem" id="trennlinie1">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkImageMenuItem" id="ausschneiden1">
 		      <property name="visible">True</property>
 		      <property name="label">gtk-cut</property>
@@ -127,14 +153,6 @@
 		      <property name="label">gtk-paste</property>
 		      <property name="use_stock">True</property>
 		      <signal name="activate" handler="bb_Paste" last_modification_time="Tue, 28 Feb 2006 15:01:35 GMT"/>
-		    </widget>
-		  </child>
-
-		  <child>
-		    <widget class="GtkImageMenuItem" id="löschen1">
-		      <property name="visible">True</property>
-		      <property name="label">gtk-delete</property>
-		      <property name="use_stock">True</property>
 		    </widget>
 		  </child>
 
@@ -186,6 +204,16 @@
 		      <property name="use_stock">True</property>
 		      <signal name="activate" handler="bb_tb_run_click" last_modification_time="Tue, 28 Feb 2006 15:36:14 GMT"/>
 		      <accelerator key="F5" modifiers="0" signal="activate"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="umwandeln1">
+		      <property name="visible">True</property>
+		      <property name="label">gtk-convert</property>
+		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="bb_mi_compile_click" last_modification_time="Thu, 02 Mar 2006 20:49:43 GMT"/>
+		      <accelerator key="F7" modifiers="0" signal="activate"/>
 		    </widget>
 		  </child>
 		</widget>
