--- a/trunk/gtk.mod/sample.glade
+++ b/trunk/gtk.mod/sample.glade
@@ -18,8 +18,6 @@
   <property name="skip_pager_hint">False</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
-  <property name="focus_on_map">True</property>
-  <property name="urgency_hint">False</property>
 
   <child>
     <widget class="GtkVBox" id="main_vbox">
@@ -31,6 +29,7 @@
 	<widget class="GtkButton" id="stupid_button">
 	  <property name="border_width">3</property>
 	  <property name="visible">True</property>
+	  <property name="sensitive">False</property>
 	  <property name="can_focus">True</property>
 	  <property name="label" translatable="yes">Klicke mir!</property>
 	  <property name="use_underline">True</property>
