--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -216,6 +216,32 @@
 		      <accelerator key="F7" modifiers="0" signal="activate"/>
 		    </widget>
 		  </child>
+
+		  <child>
+		    <widget class="GtkSeparatorMenuItem" id="trennlinie2">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkCheckMenuItem" id="mnu_quickbuild">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Schnelles Erstellen</property>
+		      <property name="use_underline">True</property>
+		      <property name="active">False</property>
+		      <signal name="toggled" handler="bb_mnu_quickbuild_toggled" last_modification_time="Sun, 05 Mar 2006 11:20:36 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkCheckMenuItem" id="mnu_debugmode">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Debug-Modus</property>
+		      <property name="use_underline">True</property>
+		      <property name="active">False</property>
+		      <signal name="toggled" handler="bb_mnu_debugmode_toggled" last_modification_time="Sun, 05 Mar 2006 11:20:48 GMT"/>
+		    </widget>
+		  </child>
 		</widget>
 	      </child>
 	    </widget>
