--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -62,6 +62,39 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkImageMenuItem" id="wieder_öffnen1">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Wieder öffnen...</property>
+		      <property name="use_underline">True</property>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image6">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-goto-last</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkMenu" id="wieder_öffnen1_menu">
+
+			  <child>
+			    <widget class="GtkMenuItem" id="datei1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Datei1</property>
+			      <property name="use_underline">True</property>
+			    </widget>
+			  </child>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkImageMenuItem" id="speichern1">
 		      <property name="visible">True</property>
 		      <property name="label">gtk-save</property>
@@ -175,7 +208,7 @@
 		      <signal name="activate" handler="bb_MIEinstellungenClick" last_modification_time="Mon, 13 Feb 2006 17:28:34 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image1">
+			<widget class="GtkImage" id="image7">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-preferences</property>
 			  <property name="icon_size">1</property>
